fix: description section desktop layout - modified line height to add paragraph spacing - removed one paragraph from main description - edit project keywords (increase size to 0.95rem and bold to 400)

--- a/style.css
+++ b/style.css
@@ -353,13 +353,14 @@ td:nth-child(2) {
 }
 
 .project-key-words {
-    font-weight: 300;
-    font-size: 0.9rem;
+    font-weight: 400;
+    font-size: 0.95rem;
 }
 
 .project-description {
     font-size: 1rem;
     color: #969696;
+    line-height: 170%;
 }
 
 .project-links {
